--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "node deploy.js"
   },
   "devDependencies": {
     "sass": "^1.93.2",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
